# project-management-django

./: .gitignore  README.md  pyproject.toml  setup.bat
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/public/: veritas-leave-format.docx
frontend/src/: App.css  App.jsx  App.tsx  Layout.jsx  index.css  main.jsx
frontend/src/components/: Back.jsx  Button.jsx  Dashboard.tsx  LoginComponent.tsx  LogoutButton.tsx  Modal.jsx  Navbar.tsx  NotificationPopover.jsx  ProjectDetail.tsx  ProjectDetails.jsx  ProjectForm.jsx  ProjectForm.tsx  ProjectList.tsx  ProtectedRoute.tsx  SearchField.jsx  Sidebar.jsx  TaskDetails.jsx  TaskEditForm.jsx  TaskForm.jsx  TaskList.tsx  TextArea.jsx  TextField.jsx  UploadImage.jsx  UploadProfileImage.jsx
frontend/src/context/: AuthContext.tsx
frontend/src/contexts/: userProvider.jsx
frontend/src/hooks/: file-hook.js  image-hook.js  useAccessToken.jsx  useProjects.js  useProjects.ts  useProtectedQuery.ts  useSwipeRefresh.jsx
frontend/src/lib/: Projects.js  auth.js  auth.ts  axios.js  projects.ts
frontend/src/pages/: Register.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx  GanttChartPage.jsx
frontend/src/routes/: index.tsx
project_management/: db.sqlite3  settings.py
project_management/mysite/: settings.py  urls.py
project_management/project_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
project_management/project_api/migrations/: 0001_initial.py  0002_add_project_dates.py  0003_add_notification_type.py
(+6 files in other folders)
